Prevent text from overflowing on resutls page

--- a/src/App.scss
+++ b/src/App.scss
@@ -887,14 +887,14 @@ body {
             .subject {
               line-height: 1.6rem;
               font-weight: 200;
-              width: 70%;
+              width: 65%;
             }
 
             .answer {
               display: block;
               line-height: 1.6rem;
               font-weight: 600;
-              width: 30%;
+              width: 35%;
             }
           }
         }
@@ -916,13 +916,13 @@ body {
             .vital-subject {
               line-height: 1.6rem;
               font-weight: 200;
-              width: 80%;
+              width: 75%;
             }
 
             .vital-answer {
               line-height: 1.6rem;
               font-weight: 400;
-              width: 20%;
+              width: 25%;
             }
           }
         }
